[package]
name               = "swag"
version            = "0.1.0"
authors            = ["Klas Segeljakt <klasseg@kth.se>"]
description        = "General Purpose Sliding Window Aggregator."
homepage           = "https://cda-group.github.io/"
repository         = "https://www.github.com/segeljakt/swag"
documentation      = "https://segeljakt.github.io/swag/"
readme             = "README.md"
keywords           = ["compiler", "data-science"]
categories         = ["science", "database"]
license            = "MIT"
# license-file       = "" TODO
edition            = "2018"
build              = "build.rs"
publish            = false

[lib]
name               = "swag"
path               = "src/lib.rs"

[[bin]]
name               = "bin"
path               = "src/main.rs"

[[bench]]
name               = "bench"
harness            = false

[dependencies]
derive_more        = { version = "0.99.5", default-features = false, features = ["constructor"] }
num-traits         = "0.2.11"
arrayvec           = "0.5.1"
lazy_static        = "1.4.0"
itertools          = "0.9.0"
typed-arena        = "2.0.1"
quickcheck         = "0.9.2"
rand               = "0.7.3"
alga = "0.9.3"
object-pool = "0.4.4"

[dev-dependencies]
criterion          = "0.3.1"
criterion-cpu-time = "0.1.0"
proptest           = "0.9.6"
honggfuzz          = "0.5.47"

[profile.dev]
opt-level        = 0
debug            = 2
debug-assertions = true
rpath            = false
lto              = false
panic            = 'unwind'
incremental      = true

[profile.release]
opt-level        = 3
debug            = 0
debug-assertions = false
rpath            = false
lto              = false
codegen-units    = 1
panic            = 'unwind'

[profile.test]
opt-level        = 0
debug            = 2
debug-assertions = true
rpath            = false
lto              = false
codegen-units    = 1

[profile.bench]
opt-level        = 3
debug            = 0
rpath            = false
lto              = false
debug-assertions = false
codegen-units    = 1
